Kontaktformular eingefügt + Azure Django Superuser angelegt

--- a/homepage/templates/homepage/base_home.html
+++ b/homepage/templates/homepage/base_home.html
@@ -59,7 +59,8 @@
 
                     <!-- 3. CONTACT -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link {% if request.resolver_match.view_name == 'homepage:contact' %}active fw-bold{% endif %}" 
+                        href="{% url 'homepage:contact' %}">Contact</a>
                     </li>
 
                     <!-- 4. HISTORICAL CHESS MAGS -->
