--- a/homepage/templates/homepage/my_chess_club.html
+++ b/homepage/templates/homepage/my_chess_club.html
@@ -80,10 +80,21 @@
                 Every first Tuesday of a month we organize a strong Blitz tournament. 
                 Please visit us.
             </p>
+        </div>
+        <div class="social-links">
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/schachclub_bonn_beuel/" target="_blank" rel="noopener noreferrer" class="social-btn instagram">
+                <i class="fa-brands fa-instagram"></i>
+                <span>Besuche uns auf Instagram</span>
+            </a>
 
-            <a href="https://scbb.de" target="_blank" class="chess-button">
-                Visit SC Bonn Beuel
+            <!-- Homepage (verbessert) -->
+            <!-- target="_blank" öffnet neuen Tab, rel="noopener" ist wichtig für Sicherheit -->
+            <a href="https://scbb.de" target="_blank" rel="noopener noreferrer" class="social-btn website">
+                <i class="fa-solid fa-globe"></i>
+                <span>scbb.de</span>
             </a>
         </div>
+
     </div>
 {% endblock %}
