created app fintech

--- a/homepage/templates/homepage/my_chess_club.html
+++ b/homepage/templates/homepage/my_chess_club.html
@@ -85,7 +85,7 @@
             <!-- Instagram -->
             <a href="https://www.instagram.com/schachclub_bonn_beuel/" target="_blank" rel="noopener noreferrer" class="social-btn instagram">
                 <i class="fa-brands fa-instagram"></i>
-                <span>Besuche uns auf Instagram</span>
+                <span>Instagram</span>
             </a>
 
             <!-- Homepage (verbessert) -->
